o Use Integer.valueOf() instead of new Integer
git-svn-id: https://svn.apache.org/repos/asf/directory/studio/trunk@1693097 13f79535-47bb-0310-9956-ffa450edef68